@@ -5013,27 +5013,15 @@ loop:		for(int i = lineNo - 1; i >= 0; i--)
 	//{{{ updateMaxHorizontalScrollWidth() method
 	void updateMaxHorizontalScrollWidth()
 	{
-		int max = chunkCache.getMaxHorizontalScrollWidth();
-
-		if(max != maxHorizontalScrollWidth)
-		{
-			maxHorizontalScrollWidth = max;
-			horizontal.setValues(
-				Math.max(0,
-					Math.min(
-					maxHorizontalScrollWidth + charWidth - painter.getWidth(),
-					-horizontalOffset)
-				),
-				painter.getWidth(),
-				0,
-				maxHorizontalScrollWidth + charWidth);
-			horizontal.setUnitIncrement(10);
-			horizontal.setBlockIncrement(painter.getWidth());
-		}
-		else if (horizontal.getValue() != -horizontalOffset)
-		{
-			horizontal.setValue(-horizontalOffset);
-		}
+		maxHorizontalScrollWidth = chunkCache.getMaxHorizontalScrollWidth();
+		horizontal.setValues(
+			Math.max(0, Math.min(maxHorizontalScrollWidth + charWidth - painter.getWidth(),	-horizontalOffset)),
+			painter.getWidth(),
+			0,
+			maxHorizontalScrollWidth + charWidth
+		);	
+		horizontal.setUnitIncrement(10);
+		horizontal.setBlockIncrement(painter.getWidth());
 	} //}}}
 
 	//{{{ recalculateVisibleLines() method
